Fixing bug 268036. Make sure the global scope polluter is always installed, even on the first document load. Fixes problem with the global scope polluter not working its magic in documents opened in new tabs. r=shaver@mozilla.org, sr=brendan@mozilla.org